# archon

./: .flake8  .gitignore  Makefile  README.md  archon_query.py  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: test.yaml
Utilities/: archon_analyze.ipynb  archon_dedupe.ipynb  archon_post_process.ipynb
archon/: __main__.py  analysis.py  buffers.py  cli.py  commands.py  config.py  engine.py  ephemera.py  harness.py  patterns.py  pipeline.py  query.py  synthdefs.py  utils.py
legacy/Utilities/: archon_post_process.ipynb  archon_split.ipynb
tests/: analysis.json  conftest.py  test_buffers.py  test_pipeline.py  test_query.py  test_synthdefs.py
